@@ -1,5 +1,8 @@
 19 May 2009
 
+* If LANG contains "UTF-8", assume the terminal supports UTF-8, on the grounds
+  that anyone who configures it probably wants UTF-8. Not certain if this is
+  a perfect idea but let's see if it causes any problems.
 * New window option: monitor-content. Searches for a string in a window and if
   it matches, highlight the status line.
 
@@ -1275,7 +1278,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.293 2009-05-19 13:32:55 tcunha Exp $
+$Id: CHANGES,v 1.294 2009-05-19 16:03:18 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
